--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -49,6 +49,13 @@
 	note = {Accessed: 12-10-2016}
 }
 
+@manual{aws,
+	author = {Arduino.cc},
+	address = {\url{https://www.arduino.cc/en/Main/ArduinoWiFiShield}},
+	title = {Arduino WiFi Shield},
+	note = {Accessed: 17-10-2016}
+}
+
 @manual{ams,
 	author = {Arduino.cc},
 	address = {\url{https://www.arduino.cc/en/Main/ArduinoMotorShieldR3}},
