--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -50,8 +50,8 @@ For the making the robot connect to the program for the Microsoft Kinect and con
 
 \subsection{Arduino Wifi Shield}
 \label{sec: Arduino Wifi Shield}
-The Arduino Motor Shield is needed for the project to control the two DC motors independently. Without the motor shield the robot would only be able to run forward and backwards with both tires at the same time, not making it possible to turn. 
-To run the motor shield an external power source is needed, in this case two 9V batteries in a serial circuit. 
+The WifiShield was acquired to enable wifi communication between the Kinect sensor and the arduino mega. Intended use was for the Kinect to send the coordinates of the object or the coordinates of the object when it lands and or bounces to the arduino. The wifi connection is able to transmit data at a rate of 9600 bits a minute, which is equivalent to 1.2 bytes per millisecond. 
+\citep{aws}
 
 \subsection{Arduino Motor Shield}
 \label{sec:Arduino Motor Shield}
