Kinect Increment One

--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -78,8 +78,17 @@
 	note = {Accessed: 25-09-2016}
 }
 
+@manual{kw,
+	author= {Wikipedia.com},
+	address = {\url{https://en.wikipedia.org/wiki/Kinect}},
+	title = {Kinect Wiki},
+	year = {2016},
+	note = {Accessed: 19-10-2016}
+	}
+
 
 @misc{cd,
 	author ={Bilags-CD},
 	title ={CD med bilag tilhørende B131}	
 }
+
