--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -5,7 +5,7 @@ Skal komme væk fra accelerotmeter og gyroscope.
 
 \section{Requirements}
 \label{sec:i1Requirements}
-The requirements which will be considered in this increment is mark with a blue colour.
+The requirements considered in this increment are marked with blue colouring.
 
 \begin{itemize}
 \item The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area
@@ -35,23 +35,23 @@ The requirements which will be considered in this increment is mark with a blue 
 \end{itemize}
 \end{itemize}
 
-These requirements are rudimentary, and the very essence of the project lies within the fulfilment of these requirements. In this increment the fundamentals of the robot’s movement should be implemented, the predefined area should be calculated, a starting point for this area should be determined and the Microsoft Kinect should be able to detect and track an object with the use of trajectory prediction.
+These requirements are rudimentary, and the very essence of the project lies within the fulfilment of these requirements. In this increment the fundamentals of the robot’s movement should be implemented, the predefined area should be calculated, a starting point for this area should be determined and the Microsoft Kinect should be able to detect and track an object by using trajectory prediction.
 
 \section{System design}
 \label{sec:i1System Design}
-The following sections describes how the marked requirements in \ref{sec:i1Requirements} will be attempted to be fulfilled. The theories and ideas behind will be explained.
+The following sections describe how the marked requirements in \ref{sec:i1Requirements} will be attempted to be fulfilled. The theories and ideas behind will be explained subsequently.
 
 \subsection{Throwing}
 \label{sec:i1Throwing}
-Test have been made to ensure that the robot is provided the most time for the calculations and catching the trash. In order to do so, multiple test were conducted, and the results were acquired from a distance of 3 meter, the time it took for the trash (in this case, a table tennis ball) was in average 1.1 second. Multiple tests from a distance of 5 meter were also conducted and that provided an average of 1.25 second. 
+Tests have been performed to ensure that the robot is provided the maximum amount of time for calculations and catching the trash. In order to do so, multiple test were conducted, and the results were acquired from a distance of 3 meter, the time it took for the trash (in this case, a table tennis ball) was in average 1.1 second. Multiple tests from a distance of 5 meter were also conducted and that provided an average of 1.25 second. 
 
-With the results from the throwing tests, the group could conclude that a normal throw wouldn't serve the robot enough time to catch the ball, else the predefined area for the robot had to be very small, due to the limitations of the motors. As mentioned in the \ref{sec:LEGO NXT Servo motor} section, the group calculated the robot's speed to be ~87 RPM, which simply isn't enough to catch trash from a 3 or 5 meter distance. The robot would be able to catch trash within 280mm of itself, given the 1.1 second run time, for the 3 meter throw, and therefore nowhere near sufficient enough. 
+With the results from the throwing tests, the group could conclude that a normal throw wouldn't provide enough time for the robot to catch the ball, else the predefined area for the robot had to be very small, due to the limitations of the motors. As mentioned in the \ref{sec:LEGO NXT Servo motor} section, the group calculated the robot's speed to be ~87 RPM, which simply isn't enough to catch trash from a 3 or 5 meter distance. The robot would be able to catch trash within 280mm of itself, given the 1.1 second run time of a 3 meter throw, and therefore nowhere near sufficient enough. 
 
-The group decided after several tests to let the trash (still a table tennis ball) be bounced on the floor before it had to be catched, which would give the robot extra time to get to the collision point of the ball. This provided nearly double the amount of time for the throw to be catched, providing an average of 2 seconds from a 3 meter throw and 2.15 seconds from a 5 meter throw.
+The group decided after several tests to let the trash (still a table tennis ball) bounce on the floor before it had to be catched, which would give the robot extra time to get to the collision point of the ball. This provided nearly double the amount of time for the throw to be catched, providing an average of 2 seconds from a 3 meter throw and 2.15 seconds from a 5 meter throw.
 
 \subsection{Predefined area}
 \label{sec:i1Predefined area}
-The robots predefined area, is a field where the robot should catch the ball within. As mentioned in  section \ref{sec:i1Throwing}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will be its starting point every time. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \ref{figure:Predefined area}. The predefined area have an area of of 2851.5cm\begin{math}^2\end{math} which is 0.285m\begin{math}^2\end{math}.
+The robots predefined area, is a field where the robot should catch the ball within. As mentioned in  section \ref{sec:i1Throwing}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will always be its starting point. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \ref{figure:Predefined area}. The predefined area have an area of of 2851.5cm\begin{math}^2\end{math} which is 0.285m\begin{math}^2\end{math}.
 
 \begin{figure}[h]
 \centering
