--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -70,6 +70,7 @@ Considering all the limitations and the capabilities of the hardware for the pro
 \item The robot should know where it is positioned
 \begin{itemize}
 \item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position }
+\item \textcolor{red}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 \end{itemize}
 \item The robot should be able to detect and track the thrown trash
 \begin{itemize}
