--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -15,6 +15,7 @@ The requirements considered in this increment are marked with blue colouring.
 \item The robot should know where it is positioned
 \begin{itemize}
 \item \textcolor{blue}{The robot should have a starting position, from where it should be able to calculate it's current position}
+\item \textcolor{blue}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 \end{itemize}
 \item The robot should be able to detect and track the thrown trash
 \begin{itemize}
@@ -43,22 +44,11 @@ The following sections describe how the marked requirements in \ref{sec:i1Requir
 
 \subsection{Throwing}
 \label{sec:i1Throwing}
-Tests have been performed to ensure that the robot is provided the maximum amount of time for calculations and catching the trash. In order to do so, multiple test were conducted, and the results were acquired from a distance of 3 meter, the time it took for the trash (in this case, a table tennis ball) was in average 1.1 second. Multiple tests from a distance of 5 meter were also conducted and that provided an average of 1.25 second. 
-
-With the results from the throwing tests, the group could conclude that a normal throw wouldn't provide enough time for the robot to catch the ball, else the predefined area for the robot had to be very small, due to the limitations of the motors. As mentioned in the \ref{sec:LEGO NXT Servo motor} section, the group calculated the robot's speed to be ~87 RPM, which simply isn't enough to catch trash from a 3 or 5 meter distance. The robot would be able to catch trash within 280mm of itself, given the 1.1 second run time of a 3 meter throw, and therefore nowhere near sufficient enough. 
-
-The group decided after several tests to let the trash (still a table tennis ball) bounce on the floor before it had to be catched, which would give the robot extra time to get to the collision point of the ball. This provided nearly double the amount of time for the throw to be catched, providing an average of 2 seconds from a 3 meter throw and 2.15 seconds from a 5 meter throw.
+The reason why the throw of the object (which in this project will be a table tennis ball) is important, is because the robot should have as much time to move to the collision point as possible. Before the robot moves to the collision point, the Kinect should calculate the where the robot should move, send the data to the robot, and the robot then moves. The Kinect can at any point send new data to the robot, so its course have to be changed, therefore it is important for the robot to have sufficient time to move within the predefined area.   
 
 \subsection{Predefined area}
 \label{sec:i1Predefined area}
-The robots predefined area, is a field where the robot should catch the ball within. As mentioned in  section \ref{sec:i1Throwing}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will always be its starting point. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \ref{figure:Predefined area}. The predefined area have an area of of 2851.5cm\begin{math}^2\end{math} which is 0.285m\begin{math}^2\end{math}.
-
-\begin{figure}[h]
-\centering
-\includegraphics[scale=0.35]{billeder/predefined-area}
-\caption{The robots predefined area}
-\label{figure:Predefined area}
-\end{figure}
+The robots predefined area, is an area where the robot should catch the ball within. This area is being made because of the limitations of the robots motors, so the predefined area is where the robot should be expected to catch the ball within. 
 
 \subsection{Microsoft Kinect}
 \label{sec:i1Microsoft Kinect}
@@ -111,6 +101,32 @@ The accelerometer will be used to calculate the distance the robot have traveled
 
 \section{Implementation}
 \label{sec:i1Implementation}
+
+\subsection{Throwing}
+\label{sec:i1ThrowingImplementation}
+Tests have been performed to ensure that the robot is provided the maximum amount of time for calculations and catching the trash. In order to do so, multiple test were conducted, and the results were acquired from a distance of 3 meter, the time it took for the trash (in this case, a table tennis ball) was in average 1.1 second. Multiple tests from a distance of 5 meter were also conducted and that provided an average of 1.25 second. 
+
+With the results from the throwing tests, the group could conclude that a normal throw wouldn't provide enough time for the robot to catch the ball, else the predefined area for the robot had to be very small, due to the limitations of the motors. As mentioned in the \ref{sec:LEGO NXT Servo motor} section, the group calculated the robot's speed to be ~87 RPM, which simply isn't enough to catch trash from a 3 or 5 meter distance. The robot would be able to catch trash within 280mm of itself, given the 1.1 second run time of a 3 meter throw, and therefore nowhere near sufficient enough. 
+
+The group decided after several tests to let the trash (still a table tennis ball) bounce on the floor before it had to be catched, which would give the robot extra time to get to the collision point of the ball. This provided nearly double the amount of time for the throw to be catched, providing an average of 2 seconds from a 3 meter throw and 2.15 seconds from a 5 meter throw.
+
+\subsection{Predefined area}
+\label{sec:i1Predefined areaImplementation}
+The robots predefined area will be calculated using the travel time of the ball and the speed of the motors used for the project. 
+As mentioned in  section \ref{sec:i1ThrowingImplementation}, the bouncing throw would have a travel time of 2 - 2.15 seconds, before landing in the predefined area. The predefined area was calculated using the robot itself. The robot was placed marking its starting point, which will always be its starting point. It was set to turn a specific number of degrees and moving forward, after two seconds the robot would stop. The place the robot stops is marked aswell, which lead to the predefined area seen in figure \ref{figure:Predefined area}. The predefined area have an area of of 2851.5cm\begin{math}^2\end{math} which is 0.285m\begin{math}^2\end{math}.
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.35]{billeder/predefined-area}
+\caption{The robots predefined area}
+\label{figure:Predefined area}
+\end{figure}
+
+\subsection{Microsoft Kinect}
+\label{sec:i1Microsoft KinectImplementation}
+
+\subsection{Gyroscope and Accelerometer}
+\label{sec:i1Gyroscope and AccelerometerImplementation}
 
 \section{Evaluation}
 \label{sec:i1Evaluation}
