--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -99,6 +99,12 @@ The purpose of the gyroscope is to get the number of degrees the robot have turn
 The accelerometer will be used to calculate the distance the robot have traveled since it started moving. The speed of the robot and the time the robot have been at that speed should be recorded, which should be done for every speed change of the robot, to capture the distance it have travled.
 (\textcolor{red}{Should look this section over at some point})
 
+
+\subsection{Movement}
+\label{Movement}
+The robot was expected to be able to drive forward and backwards, to enable it to at most turn 180 degrees, since both forward and backward movement would enable this.. The robot was expected to be able to turn whether using one active wheel or make both wheels go counterclockwise each other.
+
+
 \section{Implementation}
 \label{sec:i1Implementation}
 
@@ -127,6 +133,11 @@ The group decided after several tests to let the trash (still a table tennis bal
 
 \subsection{Gyroscope and Accelerometer}
 \label{sec:i1Gyroscope and AccelerometerImplementation}
+
+\subsection{Movement}
+\label{Movement}
+Movement: The wheels were tested and forward motion was achieved with a speed of [insert speed] centimetres per second. The robot was also able to drive backwards at a lower speed of ….. Insert reason why we didn't turn by moving both wheels counterclockwise each other. 
+
 
 \section{Evaluation}
 \label{sec:i1Evaluation}
