--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -31,7 +31,6 @@ The requirements considered in this increment are marked with blue colouring.
 \end{itemize}
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
-\item \textcolor{blue}{The robot should be able to turn, drive forward and drive backwards}
 \item Multiple trash thrown should not be considered
 \end{itemize}
 \end{itemize}
@@ -101,7 +100,7 @@ The accelerometer will be used to calculate the distance the robot have traveled
 
 
 \subsection{Movement}
-\label{Movement}
+\label{sec:i1Movement}
 The robot was expected to be able to drive forward and backwards, to enable it to at most turn 180 degrees, since both forward and backward movement would enable this.. The robot was expected to be able to turn whether using one active wheel or make both wheels go counterclockwise each other.
 
 
@@ -135,7 +134,7 @@ The group decided after several tests to let the trash (still a table tennis bal
 \label{sec:i1Gyroscope and AccelerometerImplementation}
 
 \subsection{Movement}
-\label{Movement}
+\label{sec:i1MovementImplementation}
 Movement: The wheels were tested and forward motion was achieved with a speed of [insert speed] centimetres per second. The robot was also able to drive backwards at a lower speed of ….. Insert reason why we didn't turn by moving both wheels counterclockwise each other. 
 
 
