--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -34,7 +34,7 @@
 \include{intro/analysis}
 
 %% Kontekst %%
-\include{kontekst/Theory}
+%\include{kontekst/Theory}
 \include{kontekst/Hardware}
 \include{kontekst/IncrementOne}
 \include{kontekst/IncrementTwo}
