--- a/Rapport/kontekst/IncrementTwo.tex
+++ b/Rapport/kontekst/IncrementTwo.tex
@@ -19,7 +19,7 @@ The data should be sent, as earlier mentioned in section \ref{sec: Arduino Wifi 
 \label{sec:Wifi Shield Implementation}
 First a private network for the computer running the Kinect program and the Arduino wifi shield were sat up. This was done so that it was possible to port forward the necessary ports on the router, so that the Kinect program could send the data to the wifi shield.
 
-\begin{lstlisting}[caption={Connecting the Wifi shield to the network} label={ws}]
+\begin{lstlisting}[caption={Connecting the Wifi shield to the network}, label={ws}]
 void setup() {
   Serial.begin(9600);
 
