Lasse er en lille bitch

--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -91,7 +91,7 @@ After this section, the projectile can be tracked, and the path for a given proj
 
 \subsection{Gyroscope and Accelerometer}
 \label{sec:i1Gyroscope and Accelerometer}
-For positioning the robot, the Lego NXY Gyro and Accelerometer sensors will be considered. These sensors will be used together to position the robot, as the gyroscope will tell the number of degrees the robot has turned, which is relative to the heading of the robot at the start of the recording of data. This heading will be used together with an accelerometer, which can be used to calculate the distance the robot has traveled since the beginning of the recording of data. The time spent and the speed of the robot will be the data of this sensor.
+For positioning the robot, the Lego NXT Gyro and Accelerometer sensors will be considered. These sensors will be used together to position the robot, as the gyroscope will tell the number of degrees the robot has turned, which is relative to the heading of the robot at the start of the recording of data. This heading will be used together with an accelerometer, which can be used to calculate the distance the robot has traveled since the beginning of the recording of data. The time spent and the speed of the robot will be the data of this sensor.
 
 
 \subsection{Movement}
