Lasse is a bisch

--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -31,6 +31,7 @@ The requirements considered in this increment are marked with blue colouring.
 \end{itemize}
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
+\item \textcolor{blue}{The robot should be able to turn, drive forward and drive backwards}
 \item Multiple trash thrown should not be considered
 \end{itemize}
 \end{itemize}
