--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -137,7 +137,8 @@ Movement: The wheels were tested and forward motion was achieved with a speed of
 
 \section{Evaluation}
 \label{sec:i1Evaluation}
-The requirements stating that the robot should know where it is positioned, will persist through this increment, as no solution has been found. The use of a gyroscope and accelerometer was not the right solution for this project, as the need of precise data would not be supported by sensors with a large amount of jitter. The robots starting position will always determine where the predefined area of the robot is, as the predefined area is defined by the robots position, and it's hardware limitations. The concept of predefined area is entirely based on the rotation speed of motor with wheel circumference and the duration of the throw, if any element the predefined area consists of changes, then so does the predefined area. Movement was not nearly as simple as expected and the implications of the problems encountered in its implementation is not fully solved in increment one.
+The requirements stating that the robot should know where it is positioned, will persist through this increment, as no solution has been found. The use of a gyroscope and accelerometer was not the right solution for this project, as the need of precise data would not be supported by sensors with a large amount of jitter. Another way of positioning the robot would be by calculating the distance traveled on each wheel, through the sensor in the NXT servo motors. The distance traveled would be calculated by the rotation of the wheel and the circumference of that wheel.
+The robots starting position will always determine where the predefined area of the robot is, as the predefined area is defined by the robots position, and it's hardware limitations. The concept of predefined area is entirely based on the rotation speed of motor with wheel circumference and the duration of the throw, if any element the predefined area consists of changes, then so does the predefined area. Movement was not nearly as simple as expected and the implications of the problems encountered in its implementation is not fully solved in increment one.
 
 When considering the the requirement: ”The robot should be able to turn, drive forward and drive backwards”, the group decided to remove the drive backwards part of the requirement as the group has decided to have a fixed starting point, from where the trash bin will always start and therefore didn’t see a reason for the ability to move backwards.
 The other two parts of the requirement are fulfilled.
