--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -151,7 +151,7 @@ The requirements after finalizing increment one is:
 \end{itemize}
 \item The robot should know where it is positioned
 \begin{itemize}
-	\item \textcolor{yellow}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of wheel rotations}
+	\item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motory encoders}
 	\item \textcolor{green}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 \end{itemize}
 \item The robot should be able to detect and track the thrown trash
@@ -165,7 +165,7 @@ The requirements after finalizing increment one is:
 \end{itemize}
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
-	\item \textcolor{purple}{The robot should be able to turn and drive forward}
+	\item \textcolor{orange}{The robot should be able to turn and drive forward}
 	\item Multiple trash thrown should not be considered
 \end{itemize}
 \end{itemize}
