Rettelser af rapport.

--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -1,6 +1,6 @@
 \chapter*{Preface}
-This project has been developed as part of the fourth semester project by project group SW510E16 from Aalborg University, Software Engineering, from the period 2nd September to 21st December 2016 . \newline
-The project is based on the \textit{Aalborg-model}, study method, where problem and project based learning is the focus. The theme of this semester was to make an embedded system. The project group chose to make a trash bin that should be able to catch the trash thrown at it. \newline
+This project has been constructed as part of the fourth semester project the by project group SW510E16 from Aalborg University, Software Engineering, from the period 2nd September to 21st December 2016 . \newline
+The project is based on the \textit{Aalborg-model} study method, where problem and project based learning is the focus. The theme of this semester is to make an embedded system with real-time constraints. The project group chose to make a trash bin that should be able to catch the trash thrown at it. \newline
 
 Thank the people who should be thanked for helping making the project, here. 
 \newline
