--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -85,6 +85,6 @@ Considering all the limitations and the capabilities of the hardware for the pro
 \item The robot should be able to move the trash bin, such that the thrown object lands inside the bin
 \begin{itemize}
 \item \textcolor{red}{The robot should be able to turn and drive forward and backwards}
-\item \textcolor{red}{Multiple objects thrown should not be considered}
 \end{itemize}
+\item \textcolor{red}{The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
