--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -25,15 +25,12 @@ The requirements considered in this increment are marked with blue colouring.
 	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item \textcolor{blue}{Trajectory prediction should be used to calculate the impact point of the thrown object}
-		%\item \textcolor{red}{The trajectory prediction should include a bounce prediction}
-		%\item \textcolor{red}{The bounce-shot should be thrown from a designated side of the camera}
-		%\item \textcolor{red}{The bounce-shot should bounce into the predefined area where the robot should catch the trash within }
 	\end{itemize}
 	\item The robot should be able to move the trash bin, such that the thrown object lands inside the bin
 	\begin{itemize}
 		\item \textcolor{blue}{The robot should be able to turn and drive forward and backwards}
-		\item Multiple objects thrown should not be considered
 	\end{itemize}
+	\item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
 
 These requirements are rudimentary, and the very essence of the project lies within the fulfilment of these requirements. In this increment the fundamentals of the robots movement should be implemented, the predefined area should be defined, a starting point for this area should be determined and the Microsoft Kinect should be able to detect and track an object by using trajectory prediction.
@@ -168,6 +165,6 @@ The requirements after finalizing increment one is:
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
 	\item \textcolor{orange}{The robot should be able to turn and drive forward}
-	\item Multiple trash thrown should not be considered
 \end{itemize}
+\item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
